--- a/DesafioSistemaGestaoBiblioteca.csproj
+++ b/DesafioSistemaGestaoBiblioteca.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Remove="Models\ICalculaPrazoEmprestimo.cs" />
+    </ItemGroup>
+
 </Project>
