Adiciona informações no arquivo de compilação

--- a/DesafioSistemaGestaoBiblioteca.csproj
+++ b/DesafioSistemaGestaoBiblioteca.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <Compile Remove="Models\ICalculaPrazoEmprestimo.cs" />
+      <Compile Remove="Services\EmprestimoLivroService.cs" />
     </ItemGroup>
 
 </Project>
